// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPropertiesPanel existing list 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
          id="list-properties-hdr"
        >
          <span
            class="domain-panel-status-icon"
          >
            <span
              class="fa fa-check-circle"
            />
          </span>
          <span
            class="domain-panel-title"
          >
            NIMHDemographics - List Properties
          </span>
        </div>
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing lists
                  </a>
                </div>
              </div>
            </div>
          </div>
          <form>
            <div
              class="col-xs-12 col-md-7"
            >
              <div
                class="domain-field-section-heading"
              >
                Basic Properties
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-3 col-lg-2"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Name
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                     *
                  </span>
                </div>
                <div
                  class="col-xs-9 col-lg-8"
                >
                  <input
                    class="form-control"
                    id="name"
                    placeholder="Enter a name for this list"
                    type="text"
                    value="NIMHDemographics"
                  />
                </div>
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-3 col-lg-2"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Description
                  </span>
                </div>
                <div
                  class="col-xs-9 col-lg-8"
                >
                  <textarea
                    class="form-control"
                    id="description"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-xs-12 col-md-3"
            >
              <div
                class="domain-field-section-heading"
              >
                Allow these Actions
              </div>
              <div
                class="list__properties__allowable-actions"
              >
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Delete
                    </label>
                  </div>
                </div>
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Upload
                    </label>
                  </div>
                </div>
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Export & Print
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="domain-field-float-right btn btn-default"
              type="button"
            >
              Advanced Settings
            </button>
          </form>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip1"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
        id="list-properties-hdr"
      >
        <span
          class="domain-panel-status-icon"
        >
          <span
            class="fa fa-check-circle"
          />
        </span>
        <span
          class="domain-panel-title"
        >
          NIMHDemographics - List Properties
        </span>
      </div>
      <div
        class="panel-body"
      >
        <div
          class="row margin-bottom"
        >
          <div
            class="col-xs-12"
          >
            <div
              class="row"
            >
              <div
                class="col-xs-12"
              >
                <a
                  class="domain-field-float-right"
                  href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about designing lists
                </a>
              </div>
            </div>
          </div>
        </div>
        <form>
          <div
            class="col-xs-12 col-md-7"
          >
            <div
              class="domain-field-section-heading"
            >
              Basic Properties
            </div>
            <div
              class="row margin-top"
            >
              <div
                class="col-xs-3 col-lg-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Name
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                   *
                </span>
              </div>
              <div
                class="col-xs-9 col-lg-8"
              >
                <input
                  class="form-control"
                  id="name"
                  placeholder="Enter a name for this list"
                  type="text"
                  value="NIMHDemographics"
                />
              </div>
            </div>
            <div
              class="row margin-top"
            >
              <div
                class="col-xs-3 col-lg-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Description
                </span>
              </div>
              <div
                class="col-xs-9 col-lg-8"
              >
                <textarea
                  class="form-control"
                  id="description"
                />
              </div>
            </div>
          </div>
          <div
            class="col-xs-12 col-md-3"
          >
            <div
              class="domain-field-section-heading"
            >
              Allow these Actions
            </div>
            <div
              class="list__properties__allowable-actions"
            >
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Delete
                  </label>
                </div>
              </div>
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Upload
                  </label>
                </div>
              </div>
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Export & Print
                  </label>
                </div>
              </div>
            </div>
          </div>
          <button
            class="domain-field-float-right btn btn-default"
            type="button"
          >
            Advanced Settings
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListPropertiesPanel list with error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
          id="list-properties-hdr"
        >
          <div
            class="overlay-trigger"
          >
            <span
              class="label-help-target"
            >
              <span
                class="domain-panel-status-icon"
              >
                <span
                  class="fa fa-exclamation-circle"
                />
              </span>
            </span>
          </div>
          <span
            class="domain-panel-title"
          >
            NIMHDemographics - List Properties
          </span>
        </div>
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing lists
                  </a>
                </div>
              </div>
            </div>
          </div>
          <form>
            <div
              class="col-xs-12 col-md-7"
            >
              <div
                class="domain-field-section-heading"
              >
                Basic Properties
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-3 col-lg-2"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Name
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                     *
                  </span>
                </div>
                <div
                  class="col-xs-9 col-lg-8"
                >
                  <input
                    class="form-control"
                    id="name"
                    placeholder="Enter a name for this list"
                    type="text"
                    value="NIMHDemographics"
                  />
                </div>
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-3 col-lg-2"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Description
                  </span>
                </div>
                <div
                  class="col-xs-9 col-lg-8"
                >
                  <textarea
                    class="form-control"
                    id="description"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-xs-12 col-md-3"
            >
              <div
                class="domain-field-section-heading"
              >
                Allow these Actions
              </div>
              <div
                class="list__properties__allowable-actions"
              >
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Delete
                    </label>
                  </div>
                </div>
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Upload
                    </label>
                  </div>
                </div>
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Export & Print
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="domain-field-float-right btn btn-default"
              type="button"
            >
              Advanced Settings
            </button>
          </form>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip2"
    >
      <div />
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip3"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
        id="list-properties-hdr"
      >
        <div
          class="overlay-trigger"
        >
          <span
            class="label-help-target"
          >
            <span
              class="domain-panel-status-icon"
            >
              <span
                class="fa fa-exclamation-circle"
              />
            </span>
          </span>
        </div>
        <span
          class="domain-panel-title"
        >
          NIMHDemographics - List Properties
        </span>
      </div>
      <div
        class="panel-body"
      >
        <div
          class="row margin-bottom"
        >
          <div
            class="col-xs-12"
          >
            <div
              class="row"
            >
              <div
                class="col-xs-12"
              >
                <a
                  class="domain-field-float-right"
                  href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about designing lists
                </a>
              </div>
            </div>
          </div>
        </div>
        <form>
          <div
            class="col-xs-12 col-md-7"
          >
            <div
              class="domain-field-section-heading"
            >
              Basic Properties
            </div>
            <div
              class="row margin-top"
            >
              <div
                class="col-xs-3 col-lg-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Name
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                   *
                </span>
              </div>
              <div
                class="col-xs-9 col-lg-8"
              >
                <input
                  class="form-control"
                  id="name"
                  placeholder="Enter a name for this list"
                  type="text"
                  value="NIMHDemographics"
                />
              </div>
            </div>
            <div
              class="row margin-top"
            >
              <div
                class="col-xs-3 col-lg-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Description
                </span>
              </div>
              <div
                class="col-xs-9 col-lg-8"
              >
                <textarea
                  class="form-control"
                  id="description"
                />
              </div>
            </div>
          </div>
          <div
            class="col-xs-12 col-md-3"
          >
            <div
              class="domain-field-section-heading"
            >
              Allow these Actions
            </div>
            <div
              class="list__properties__allowable-actions"
            >
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Delete
                  </label>
                </div>
              </div>
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Upload
                  </label>
                </div>
              </div>
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Export & Print
                  </label>
                </div>
              </div>
            </div>
          </div>
          <button
            class="domain-field-float-right btn btn-default"
            type="button"
          >
            Advanced Settings
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListPropertiesPanel new list 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel-default domain-form-panel lk-border-theme-light"
      >
        <div
          class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
          id="list-properties-hdr"
        >
          <span
            class="domain-panel-title"
          >
            List Properties
          </span>
        </div>
        <div
          class="panel-body"
        >
          <div
            class="row margin-bottom"
          >
            <div
              class="col-xs-12"
            >
              <div
                class="row"
              >
                <div
                  class="col-xs-12"
                >
                  <a
                    class="domain-field-float-right"
                    href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about designing lists
                  </a>
                </div>
              </div>
            </div>
          </div>
          <form>
            <div
              class="col-xs-12 col-md-7"
            >
              <div
                class="domain-field-section-heading"
              >
                Basic Properties
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-3 col-lg-2"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Name
                    <div
                      class="overlay-trigger"
                    >
                      <span
                        class="label-help-target"
                      >
                        <span
                          class="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                     *
                  </span>
                </div>
                <div
                  class="col-xs-9 col-lg-8"
                >
                  <input
                    class="form-control"
                    id="name"
                    placeholder="Enter a name for this list"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="row margin-top"
              >
                <div
                  class="col-xs-3 col-lg-2"
                >
                  <span
                    class="domain-no-wrap"
                  >
                    Description
                  </span>
                </div>
                <div
                  class="col-xs-9 col-lg-8"
                >
                  <textarea
                    class="form-control"
                    id="description"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-xs-12 col-md-3"
            >
              <div
                class="domain-field-section-heading"
              >
                Allow these Actions
              </div>
              <div
                class="list__properties__allowable-actions"
              >
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Delete
                    </label>
                  </div>
                </div>
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Upload
                    </label>
                  </div>
                </div>
                <div
                  class="list__properties__checkbox-row"
                >
                  <div
                    class="form-group"
                  >
                    <label>
                      <input
                        checked=""
                        type="checkbox"
                      />
                      Export & Print
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="domain-field-float-right btn btn-default"
              type="button"
            >
              Advanced Settings
            </button>
          </form>
        </div>
      </div>
    </div>
    <div
      id="overlay-trigger-portal-label-help-tip0"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel-default domain-form-panel lk-border-theme-light"
    >
      <div
        class="domain-panel-header domain-panel-header-expanded labkey-page-nav"
        id="list-properties-hdr"
      >
        <span
          class="domain-panel-title"
        >
          List Properties
        </span>
      </div>
      <div
        class="panel-body"
      >
        <div
          class="row margin-bottom"
        >
          <div
            class="col-xs-12"
          >
            <div
              class="row"
            >
              <div
                class="col-xs-12"
              >
                <a
                  class="domain-field-float-right"
                  href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Learn more about designing lists
                </a>
              </div>
            </div>
          </div>
        </div>
        <form>
          <div
            class="col-xs-12 col-md-7"
          >
            <div
              class="domain-field-section-heading"
            >
              Basic Properties
            </div>
            <div
              class="row margin-top"
            >
              <div
                class="col-xs-3 col-lg-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Name
                  <div
                    class="overlay-trigger"
                  >
                    <span
                      class="label-help-target"
                    >
                      <span
                        class="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                   *
                </span>
              </div>
              <div
                class="col-xs-9 col-lg-8"
              >
                <input
                  class="form-control"
                  id="name"
                  placeholder="Enter a name for this list"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="row margin-top"
            >
              <div
                class="col-xs-3 col-lg-2"
              >
                <span
                  class="domain-no-wrap"
                >
                  Description
                </span>
              </div>
              <div
                class="col-xs-9 col-lg-8"
              >
                <textarea
                  class="form-control"
                  id="description"
                />
              </div>
            </div>
          </div>
          <div
            class="col-xs-12 col-md-3"
          >
            <div
              class="domain-field-section-heading"
            >
              Allow these Actions
            </div>
            <div
              class="list__properties__allowable-actions"
            >
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Delete
                  </label>
                </div>
              </div>
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Upload
                  </label>
                </div>
              </div>
              <div
                class="list__properties__checkbox-row"
              >
                <div
                  class="form-group"
                >
                  <label>
                    <input
                      checked=""
                      type="checkbox"
                    />
                    Export & Print
                  </label>
                </div>
              </div>
            </div>
          </div>
          <button
            class="domain-field-float-right btn btn-default"
            type="button"
          >
            Advanced Settings
          </button>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
